# Arvex

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/debug/res/values/: app_name.xml
app/src/debug/res/xml/: shortcuts.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: artist.xml  shortcut_albums.xml  shortcut_playlists.xml  shortcut_search.xml  shortcut_songs.xml
app/src/main/res/values-ar/: strings-ot.xml  strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-bg/: strings-ot.xml  strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings-ot.xml  strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings-ot.xml  strings.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-et/: strings-ot.xml  strings.xml
app/src/main/res/values-fa/: strings-ot.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings-ot.xml  strings.xml
app/src/main/res/values-hi/: strings-ot.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings-ot.xml  strings.xml
app/src/main/res/values-it/: strings-ot.xml  strings.xml
app/src/main/res/values-iw/: strings-ot.xml  strings.xml
app/src/main/res/values-ja/: strings-ot.xml  strings.xml
app/src/main/res/values-ko/: strings-ot.xml  strings.xml
ffMetadataEx/: .gitignore  Modules.md  README.md  build.gradle.kts
ffMetadataEx/src/main/cpp/: CMakeLists.txt  ffMetaExJni.cpp
gradle/: libs.versions.toml
taglib/: build.gradle.kts
taglib/src/main/cpp/: CMakeLists.txt
(+289 files in other folders)
